# PeridotV2Full

./: .gitignore  LEADERBOARD_SYSTEM.md  README.md  leaderboard_schema.sql  leaderboard_schema_fixed.sql  package.json  waitlist_table.sql
backend/: .gitignore  Cargo.toml  SolAddress.md
backend/NTT/: .gitignore  deployment.json
backend/contracts/: .gitignore  README.md  addresses.MD
backend/graph/: .substreams.env  Cargo.toml  generator.2025-05-04T00-00-46.json  generator.json  instructions.md  package-lock.json
backend/graph/peridot/: .gitignore  Cargo.toml  README.md  substreams.yaml
backend/graph/peridot/proto/: metaplex.v1.proto  spl_token_events.proto  wormhole_events.proto
backend/graph/peridot/src/: lib.rs
backend/graph/peridot/src/pb/: mod.rs  peridot.metaplex.v1.rs  peridot.rs  spl_token.v1.rs  wormhole.v1.rs
backend/graph/peridot/subgraph/: package.json  subgraph.yaml
backend/oraclescript/: README.md
defi-platform/: ENHANCED_FEATURES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  MULTI_CHAIN_WALLET_INTEGRATION.md  PErc20Delegate.json  README.md  WALLETCONNECT_SETUP.md  contractaddresses.txt  daily_login_schema.sql  lend&borrow-strucutre.md  next.config.js  next.config.mjs  package.json  peridot-infos.txt  peridottroller.abi  pnpm-lock.yaml  reown-appkit.md  tailwind.config.ts  tsconfig.json  wallet-integration.md
defi-platform/abi/: ERC20ABI.ts  PErc20DelegateABI.ts  PEtherABI.ts  PeridottrollerABI.ts
defi-platform/app/: PostHogPageView.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/: .gitignore  README.md  package.json
(+179 files in other folders)
