[package]
name = "peridot"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
substreams = "0.6.0"
substreams-solana = "0.14.1"
borsh = "0.10.3"
solana-program = "1.18.12"
bs58 = "0.5.1"
mpl-token-metadata = "^4.1.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
